Support scene and sprite (#2)
* support bg and sprites

* update kotlin version

* add loader config class

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  audioplayers: ^0.20.1
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -31,3 +32,6 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/story/
+    - assets/story/bg/
+    - assets/story/music/
+    - assets/story/sprites/
