--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 
 dependencies:
   audioplayers: ^0.20.1
+  animated_text_kit: ^4.2.1
   flutter:
     sdk: flutter
   flutter_localizations:
