--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   audioplayers: ^0.20.1
   animated_text_kit: ^4.2.1
+  shared_preferences: ^2.0.11
   flutter:
     sdk: flutter
   flutter_localizations:
