--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   audioplayers: ^0.20.1
   animated_text_kit: ^4.2.1
   shared_preferences: ^2.0.11
+  flutter_riverpod: ^1.0.3
   flutter:
     sdk: flutter
   flutter_localizations:
