--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,8 +43,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "id.twk.fsse"
-        minSdkVersion 16
+        applicationId "nolamabda.stream.cerita"
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
